# rembrainbridge_ros

./: CMakeLists.txt  README.md  package.xml  params.yaml  requirements.txt
launch/: main.launch  main_default.launch
scripts/: config.py  main.py
scripts/communication/: consumer.py  jpeg_meta.py  register.py
