<?xml version="1.0"?>
<package format="2">
  <name>rembrainbridge_ros</name>
  <version>0.0.0</version>
  <description>The rembrainbridge_ros package</description>

 
  <maintainer email="morzhakov@rembrain.ie">Vasily Morzhakov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>

